vlib/v/checker/tests/add_op_wrong_left_type_err_b.out
vlib/v/checker/tests/add_op_wrong_left_type_err_b.vv:2:13: error: mismatched types `[]int` and `any_int`
    1 | fn main() {
    2 |     println([1,2,3] + 10)
      |             ~~~~~~~
    3 | }
