vlib/v/checker/tests/add_op_wrong_left_type_err_b.vv
fn main() {
    println([1,2,3] + 10)
}
